--- a/Project.toml
+++ b/Project.toml
@@ -8,9 +8,12 @@ AbaqusReader = "bc6b9049-e460-56d6-94b4-a597b2c0390d"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 HOHQMesh = "e4f4c7b8-17cb-445a-93c5-f69190ed6c8c"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
