before creating 3d mesh method

--- a/Project.toml
+++ b/Project.toml
@@ -5,15 +5,21 @@ version = "0.1.0"
 
 [deps]
 AbaqusReader = "bc6b9049-e460-56d6-94b4-a597b2c0390d"
+AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
+ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GSL = "92c85e6c-cbff-5e0c-80f7-495c94daaecd"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 HOHQMesh = "e4f4c7b8-17cb-445a-93c5-f69190ed6c8c"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+Integrals = "de52edbc-65ea-441a-8357-d3a637375a31"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -22,8 +28,13 @@ LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SIMD = "fdea26ae-647d-5447-a871-4b548cad5224"
+SingularIntegralEquations = "e094c991-5a90-5477-8896-c1e4c9552a1a"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
+Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
+Wavelets = "29a6e085-ba6d-5f35-a997-948ac2efa89a"
