--- a/Project.toml
+++ b/Project.toml
@@ -15,10 +15,13 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
+FunctionZeros = "b21f74c0-b399-568f-9643-d20f4fa2c814"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GSL = "92c85e6c-cbff-5e0c-80f7-495c94daaecd"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
+HMatrices = "8646bddf-ab1c-4fa7-9c51-ba187d647618"
 HOHQMesh = "e4f4c7b8-17cb-445a-93c5-f69190ed6c8c"
+HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Integrals = "de52edbc-65ea-441a-8357-d3a637375a31"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
