changes before billiards

--- a/Project.toml
+++ b/Project.toml
@@ -31,6 +31,8 @@ LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
+Peaks = "18e31ff7-3703-566c-8e60-38913d67486b"
+ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SIMD = "fdea26ae-647d-5447-a871-4b548cad5224"
