--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
+DynamicalBilliards = "4986ee89-4ee5-5cef-b6b8-e49ba721d7a5"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
 FunctionZeros = "b21f74c0-b399-568f-9643-d20f4fa2c814"
@@ -22,6 +23,7 @@ HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 HMatrices = "8646bddf-ab1c-4fa7-9c51-ba187d647618"
 HOHQMesh = "e4f4c7b8-17cb-445a-93c5-f69190ed6c8c"
 HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Integrals = "de52edbc-65ea-441a-8357-d3a637375a31"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
@@ -29,16 +31,20 @@ IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+MATLAB = "10e44e05-a98a-55b3-a45b-ba969058deb6"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Peaks = "18e31ff7-3703-566c-8e60-38913d67486b"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SIMD = "fdea26ae-647d-5447-a871-4b548cad5224"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
