--- a/tests/Project.toml
+++ b/tests/Project.toml
@@ -1,2 +1,4 @@
 [deps]
+CoordRefSystems = "b46f11dc-f210-4604-bfba-323c1ec968cb"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
