--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
